--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
     "autoprefixer": "^10.4.13",
+    "clsx": "^2.1.1",
     "contentlayer2": "0.4.6",
+    "date-fns": "^3.6.0",
     "esbuild": "0.20.2",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.2",
@@ -30,6 +32,7 @@
     "postcss": "^8.4.24",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-medium-image-zoom": "^5.2.4",
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-citation": "^2.0.0",
@@ -41,6 +44,7 @@
     "remark-gfm": "^4.0.0",
     "remark-github-blockquote-alert": "^1.2.1",
     "remark-math": "^6.0.0",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "unist-util-visit": "^5.0.0"
   },
